# streamlit-in-aws

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
terraform/: README.md  alb.tf  data.tf  dns.tf  main.tf  output.tf  outputs.tf  security.tf  variables.tf
