[tool.poetry]
name = "streamlit-in-aws"
version = "0.1.0"
description = "Boilerplate for running a streamlit application in AWS"
authors = ["Steve Gibbard <steve.gibbard@ons.gov.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "streamlit_in_aws"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
bandit = "^1.7.8"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
